--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>6th Annual Petite Track Meet</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52852125-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-52852125-1');
+  </script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
