--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <body>
   <center>
   <br/>
-  <img class="responsive-img" src="images/ptm_2022_coming_soon.png"/>
+  <img class="responsive-img" src="images/ptm_2022.png"/>
   <br/>
   <br/>
+  <a class="waves-effect waves-light btn-small black" href="https://www.eventbrite.com/e/6th-petite-track-meet-2022-tickets-292126296617"><i class="material-icons right">event_available</i>Register  via  EventBrite</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/385326/results"><i class="material-icons right">watch_later</i>5th Annual (2019) Results</a>
   <br/><br/>
   <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a>
