--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
   <img class="responsive-img" src="images/ptm_2023.png"/>
   <br/>
   <br/>
+  <br/>
+  <div class="card-panel" style="width:50%">
+  Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the 7th Annual Petite Track Meet on  Friday, June 23rd, starting at 6 PM. 
+  <br/>
+  <br/>
+  <b><a href="https://www.athletic.net/TrackAndField/meet/501105/info">Registration</a> closes Thursday, June 22nd, so don't delay!</b>
+  <br/>
+  <br/>
+  The Petite Track Meet is an open track meet for everyone in Pittsburgh! All ages and running abilities are welcome!
+  <br/>
+  <br/>
+  Come run your PR or do a time trial for the Liberty Mile in a variety of races -- from 100 m to 5000 m -- at a convenient location at Schenley Park. 
+  <br/>
+  <br/>
+ </div>
   <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/501105/"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
   <!-- <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/947028672676511"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/> -->
   <a class="waves-effect waves-light btn-small black" href="archive\PTM 2022 RESULTS.pdf"><i class="material-icons right">watch_later</i>6th Annual (2022) Results</a><br/><br/>
