--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the 7th Annual Petite Track Meet on  Friday, June 23rd, starting at 6 PM. 
   <br/>
   <br/>
-  <b><a href="https://www.athletic.net/TrackAndField/meet/501105/info">Registration</a> closes Thursday, June 22nd, so don't delay!</b>
+  <b><a href="https://www.athletic.net/TrackAndField/meet/501105/info">Registration</a> closes Friday, June 23nd, at 5 PM, so don't delay!</b>
   <br/>
   <br/>
   The Petite Track Meet is an open track meet for everyone in Pittsburgh! All ages and running abilities are welcome!
