--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
   <br/>
   <br/>
   <div class="card-panel" style="width:90%">
+  <br>
+  <b>Thanks to everybody for racing, volunteering, and participating in the 2023 Petite Track Meet and making it such a fun event!
+  <br/>
+  <br>
+  Final 2023 results from Gingerbread Man Timing <a href="https://live.gingerbreadtiming.com/meets/26326">HERE</a></b>
+  <br/>
+  <!-- <br>
   Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the 7th Annual Petite Track Meet on  Friday, June 23rd, starting at 6 PM. 
   <br/>
-  <br/>
   <b><a href="https://www.athletic.net/TrackAndField/meet/501105/info">Registration</a> closes Friday, June 23nd, at 5 PM, so don't delay!</b>
-  <br/>
-  <br/>
+  <br/> -->
+  <br>
   The Petite Track Meet is an open track meet for everyone in Pittsburgh! All ages and running abilities are welcome!
   <br/>
   <br/>
@@ -38,8 +44,9 @@
   <br/>
   <br/>
  </div>
-  <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/501105/"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
+  <!-- <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/501105/"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/> -->
   <!-- <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/947028672676511"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/> -->
+<a class="waves-effect waves-light btn-small black" href="https://live.gingerbreadtiming.com/meets/26326"><i class="material-icons right">watch_later</i>2023 RESULTS</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="archive\PTM 2022 RESULTS.pdf"><i class="material-icons right">watch_later</i>6th Annual (2022) Results</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a>
   <br/><br/>
