--- a/ptm_2023.html
+++ b/ptm_2023.html
@@ -47,7 +47,7 @@
   <!-- <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/501105/"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/> -->
   <!-- <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/947028672676511"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/> -->
 <a class="waves-effect waves-light btn-small black" href="https://live.gingerbreadtiming.com/meets/26326"><i class="material-icons right">watch_later</i>2023 RESULTS</a><br/><br/>
-  <a class="waves-effect waves-light btn-small black" href="archive\PTM 2022 RESULTS.pdf"><i class="material-icons right">watch_later</i>6th Annual (2022) Results</a><br/><br/>
+  <a class="waves-effect waves-light btn-small black" href="archive\ptm_2022_results.pdf"><i class="material-icons right">watch_later</i>6th Annual (2022) Results</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a>
   <br/><br/>
   </center>
