--- a/past_results.html
+++ b/past_results.html
@@ -19,10 +19,18 @@
 <body>
   <center>
       <h1><a href="index.html">Petite Track Meet</a></h1>
-      <b>Past Results</b><br/>
-      <a class="waves-effect waves-light btn-small black" href="archive/ptm_2023_results.pdf"><i class="material-icons right">watch_later</i>PTM 2023 Results</a><br/><br/>
-      <a class="waves-effect waves-light btn-small black" href="archive/ptm_2022_results.pdf"><i class="material-icons right">watch_later</i>PTM 2022 Results</a><br/><br/>
-      <a class="waves-effect waves-light btn-small black" href="archive/ptm_2019_results.pdf"><i class="material-icons right">watch_later</i>PTM 2019 Results</a><br/><br/>
+      <div class="collection with-header">
+        <li class="collection-header"><h3>Past Results</h3></li>
+        <a class="collection-item" href="archive/ptm_2023_results.pdf"><i class="material-icons right">watch_later</i>PTM 2023 RESULTS</a>
+        <a class="collection-item" href="archive/ptm_2022_results.pdf"><i class="material-icons right">watch_later</i>PTM 2022 RESULTS</a>
+        <div class="collection-item"><i class="material-icons right">close</i>2021 (cancelled due to COVID) </div>
+        <div class="collection-item"><i class="material-icons right">close</i>2020 (cancelled due to COVID) </div>
+        <a class="collection-item" href="archive/ptm_2019_results.pdf"><i class="material-icons right">watch_later</i>PTM 2019 RESULTS</a>
+        <div class="collection-item"><i class="material-icons right">close</i>PTM 2018 (results not available)</div>
+        <div class="collection-item"><i class="material-icons right">close</i>PTM 2017 (results not available)</div>
+        <a class="collection-item" href="archive/ptm_2016_results.pdf"><i class="material-icons right">watch_later</i>PTM 2016 RESULTS</a>
+        <div class="collection-item"><i class="material-icons right">close</i>PTM 2014 (results not available)</div>
+      <div class="collection">
     </center>
   </body>
   </html>
