2024 title update (for real)

--- a/past_results.html
+++ b/past_results.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Petite Track Meet 2024</title>
+  <title>Petite Track Meet Past Results</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52852125-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
