Add 2024 registration and update image with USATF + fixed URL

--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
   <br/>
   <img class="responsive-img" src="images/ptm_2024.png"/>
   <br/>
-  <br/>
-  <br/>
   <div class="card-panel" style="width:90%">
-  <br>
-  <b> <span style="background-color: #FFFF00">Update, 4/21/2024: PTM 2024 registration is coming soon!</span>
   <br/>
-  <!-- <br>
-  Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the 7th Annual Petite Track Meet on  Friday, June 23rd, starting at 6 PM. 
+  Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the <b>8th Annual Petite Track Meet on Friday, June 14th, starting at 6 PM</b>. 
   <br/>
-  <b><a href="https://www.athletic.net/TrackAndField/meet/501105/info">Registration</a> closes Friday, June 23nd, at 5 PM, so don't delay!</b>
-  <br/> -->
-  <br>
+  <br/>
+  <b><span style="background-color: #FFFF00"><a href="https://www.athletic.net/TrackAndField/meet/554015/register">[REGISTRATION IS LIVE]</a></span> and closes Friday, June 14th, at 5 PM, so don't delay!</b>
+  <br/>
+  <br/>
+  <i>You can register as an "Unattached Athlete" or through your club if you're registered with them on athletic.net</i>
+  <br/>
+  <br/>
   The Petite Track Meet is an open track meet for everyone in Pittsburgh! All ages and running abilities are welcome!
   <br/>
   <br/>
@@ -41,7 +40,7 @@
   <br/>
   <br/>
  </div>
-  <!-- <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/501105/"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/> -->
+  <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/554015/register"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
   <!-- <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/947028672676511"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/> -->
   <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="past_results.html"><i class="material-icons right">watch_later</i>Past Results</a>
