--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <br/>
  </div>
   <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/554015/register"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
-  <!-- <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/947028672676511"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/> -->
+  <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/823326086517749"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="past_results.html"><i class="material-icons right">watch_later</i>Past Results</a>
   <br/><br/>
