--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
   Come run your PR or do a time trial for the Liberty Mile in a variety of races -- from 100 m to 5000 m -- at a convenient location at Schenley Park. 
   <br/>
   <br/>
+  Registration is $20 + processing fee any includes all the events you'd like to run!
+  <br/>
+  <br/>
  </div>
   <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/554015/register"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/823326086517749"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/>
