--- a/past_results.html
+++ b/past_results.html
@@ -21,6 +21,7 @@
       <h1><a href="index.html">Petite Track Meet</a></h1>
       <div class="collection with-header">
         <li class="collection-header"><h3>Past Results</h3></li>
+        <a class="collection-item" href="archive/ptm_2024_results.pdf"><i class="material-icons right">watch_later</i>PTM 2024 RESULTS</a>
         <a class="collection-item" href="archive/ptm_2023_results.pdf"><i class="material-icons right">watch_later</i>PTM 2023 RESULTS</a>
         <a class="collection-item" href="archive/ptm_2022_results.pdf"><i class="material-icons right">watch_later</i>PTM 2022 RESULTS</a>
         <div class="collection-item"><i class="material-icons right">close</i>2021 (cancelled due to COVID) </div>
