--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
   <img class="responsive-img" src="images/ptm_2024.png"/>
   <br/>
   <div class="card-panel" style="width:90%">
+  <b>Thank you to all our runners, volunteers, officials, and everybody who made the Petite Track Meet 2024 our best meet yet!</b>
   <br/>
+  <br/> 
+  <b>Results are <a href="https://www.athletic.net/TrackAndField/meet/554015/results/all">[HERE]</a></b>
+  <br/>
+  <br/>
+  Stay tuned and follow the <a href="https://www.facebook.com/PittsburghPharaohHounds/">Pittsburgh Pharaoh Hounds on Facebook</a> to get updates on the next Petite Track Meet! 
+  <br/>
+  <br/>
+  <!--<br/>
   Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the <b>8th Annual Petite Track Meet on Friday, June 14th, starting at 6 PM</b>. 
   <br/>
   <br/>
@@ -41,10 +50,10 @@
   <br/>
   Registration is $20 + processing fee any includes all the events you'd like to run!
   <br/>
-  <br/>
+  <br/>-->
  </div>
-  <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/554015/register"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
-  <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/823326086517749"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/>
+  <!--<a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/554015/register"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
+  <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/823326086517749"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/>-->
   <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a><br/><br/>
   <a class="waves-effect waves-light btn-small black" href="past_results.html"><i class="material-icons right">watch_later</i>Past Results</a>
   <br/><br/>
