2025 update w/ placeholder art

--- a/index.html
+++ b/index.html
@@ -14,51 +14,56 @@
   </script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8"/>
 </head>
 
 <body>
   <center>
   <br/>
-  <img class="responsive-img" src="images/ptm_2024.png"/>
+  <img class="responsive-img" src="images/ptm_2025.png"/>
   <br/>
+  <div>
+    <br/>
+    <br/>
+     <a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/595485/register"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
+     <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/661808516466566"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/>
+     <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a><br/><br/>
+     <a class="waves-effect waves-light btn-small black" href="past_results.html"><i class="material-icons right">watch_later</i>Past Results</a>
+     <br/><br/>
+   </div>
   <div class="card-panel" style="width:90%">
-  <b>Thank you to all our runners, volunteers, officials, and everybody who made the Petite Track Meet 2024 our best meet yet!</b>
-  <br/>
-  <br/> 
-  <b>Results are <a href="https://www.athletic.net/TrackAndField/meet/554015/results/all">[HERE]</a></b>
   <br/>
   <br/>
-  Stay tuned and follow the <a href="https://www.facebook.com/PittsburghPharaohHounds/">Pittsburgh Pharaoh Hounds on Facebook</a> to get updates on the next Petite Track Meet! 
-  <br/>
-  <br/>
-  <!--<br/>
-  Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the <b>8th Annual Petite Track Meet on Friday, June 14th, starting at 6 PM</b>. 
-  <br/>
-  <br/>
-  <b><span style="background-color: #FFFF00"><a href="https://www.athletic.net/TrackAndField/meet/554015/register">[REGISTRATION IS LIVE]</a></span> and closes Friday, June 14th, at 5 PM, so don't delay!</b>
-  <br/>
-  <br/>
-  <i>You can register as an "Unattached Athlete" or through your club if you're registered with them on athletic.net</i>
-  <br/>
-  <br/><b>NOTE</b>: 4x400 relay registration is only available online if you are connected with a "team" in your athletic.net profile. If you plan to compete in the 4x400 relay, make sure your profile is connected to a team (if desired, you can connect your name with the <a href="https://www.athletic.net/team/85399/track-and-field-outdoor/2024">Pittsburgh Pharaoh Hounds</a> team). But don't worry: if you are unable to register for 4x400 online, you will be able to create a team at the registration tent during the meet; please listen for announcements at the meet.
+  Join the <a href="https://www.pharaohhounds.org/">Pittsburgh Pharaoh Hounds</a> and <a href="https://www.gingerbreadmanrunning.com/">Gingerbread Man Running</a> at the <b>9th Annual Petite Track Meet on Friday, June 27th, 2025, starting at 6 PM</b>. 
   <br/>
   <br/>
   The Petite Track Meet is an open track meet for everyone in Pittsburgh! All ages and running abilities are welcome!
   <br/>
   <br/>
-  Come run your PR or do a time trial for the Liberty Mile in a variety of races -- from 100 m to 5000 m -- at a convenient location at Schenley Park. 
+  <b><span style="background-color: #FFFF00"><a href="https://www.athletic.net/TrackAndField/meet/595485/register">[REGISTRATION IS LIVE for PTM 2025]</a></span> and closes Friday, June 27th, at 6 PM, so don't delay!</b>
   <br/>
   <br/>
-  Registration is $20 + processing fee any includes all the events you'd like to run!
+  <i><b>TIP</b>: Register as an "Unattached Athlete" unless you are part of a running club/team that has a profile on athletic.net or want to pre-register for the 4x400 relay (see <a href="#faq_4x400_registration">FAQs</a>)</i>
   <br/>
-  <br/>-->
+  <br/>
+  Registration is $20 + processing fee and includes all the events you'd like to run!
+  <br/>
+  <br/>
+  Come run your PR in a variety of races -- from 100 m to 5000 m -- at a convenient location at Schenley Park. 
+  <br/>
  </div>
-  <!--<a class="waves-effect waves-light btn-small black" href="https://www.athletic.net/TrackAndField/meet/554015/register"><i class="material-icons right">event_available</i>Register via Athletic.net</a><br/><br/>
-  <a class="waves-effect waves-light btn-small black" href="https://www.facebook.com/events/823326086517749"><i class="material-icons right">facebook</i>  Facebook Event  </a><br/><br/>-->
-  <a class="waves-effect waves-light btn-small black" href="https://www.pharaohhounds.org/"><i class="material-icons right">web</i>Pharaoh Hounds Website</a><br/><br/>
-  <a class="waves-effect waves-light btn-small black" href="past_results.html"><i class="material-icons right">watch_later</i>Past Results</a>
-  <br/><br/>
+  <div class="card-panel" style="width:90%">
+    <h3> FAQs</h3>
+    <br>
+    <b id="faq_4x400_registration">Q: How do I register for the 4x400 relay?</b>
+    <br/>
+    <i>4x400 relay registration is available online only if you are connected with a "team" in your athletic.net profile. If you want to register online for the 4x400 relay, make sure your profile is connected to a team (if desired, you can connect with the <a href="https://www.athletic.net/team/85399/track-and-field-outdoor/2024">Pittsburgh Pharaoh Hounds</a> team). But don't worry: if you are unable to register for the 4x400 relay online, you can just register a team at the registration tent during the meet as the 4x400 approaches; listen for announcements at the meet for details.</i>
+    <br/>
+    <br/>
+    <b>Q: Is there a rain date in case of bad weather? 🌧</b>
+    <br/>
+    <i>A: No, there is no rain date for the Petite Track Meet. We plan to finish all events by 10 PM when our permit for the track expires. However, in the event of weather deemed unsafe, we may delay or pause events and will run as many remaining events as possible before 10 PM. Listen for announcements at the meet.</i>
+  </div>
   </center>
 </body>
 </html>
